# max-sick-lms100

./: .gitignore  .gitmodules  CMakeLists.txt  DS_Store.in  LICENSE  Makefile  PLAN  README.md  auto_reg_cb.hpp  bg.tiff  blob-detector.maxpat  blobs.naive.cpp  depolar.maxpat  fake.maxpat  findBlobs.js  hello_maxxx.cpp  lms100-test.cpp  lms100.cpp  lms100.hpp  lms100.maxhelp  lms100.vis1d.maxpat  maxxx.h  maxxx.hpp  maxxx.maxpat  mem_fn_wrap.hpp  messlog.c  messlog.maxhelp  method_adaptor.hpp  mk-package.sh  pfun-test.cpp  scanner.viz.old.maxpat  sick-display-ui.maxpat  sick-objects.maxpat  sick.lms1xx.maxhelp  sick.lms1xx.maxpat  tcpclient.c  tcpclient.maxhelp  tcpclient.maxpat  unSick.js  v2_jit.copy-dim.maxpat  (+1 more)
tcpclient.mxo/Contents/: Info.plist
v2_cmake/: Info.plist.in  UseMaxSDK.cmake
