PROJECT(LMS1xx-external)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(V2_CMAKE ${CMAKE_SOURCE_DIR}/v2_cmake)
INCLUDE(${V2_CMAKE}/UseMaxSDK.cmake)

SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.39.0 COMPONENTS regex REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})


FIND_PATH(PFUN_INCLUDE_DIR pfun/mem_fn_wrap.hpp PATHS .)
INCLUDE_DIRECTORIES(${PFUN_INCLUDE_DIR})

#ADD_MAX_EXTERNAL(tcpclient)
#ADD_MAX_EXTERNAL(messlog)
ADD_MAX_EXTERNAL(hello_maxxx hello_maxxx.cpp)
TARGET_LINK_LIBRARIES(hello_maxxx ${Boost_REGEX_LIBRARY})
